[tool.poetry]
name = "pygame-ultimate"
version = "0.1.0"
description = ""
authors = ["Breno Yano <brenoyano@gmail.com>"]
readme = "README.md"
packages = [{include = "pygame_ultimate"}]
repository = "https://github.com/brenoyano/pygame-tutorials"
[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
